a) Initial set of changes for movement from OkHttpClient to Apache http client b) Initial set of changes for ranger-bom, for modules using ranger to use a consistent version c) Respective pom.xml changes for (b) across modules